<resources>
    <string name="app_name">To-do List</string>
    <string name="text_username">User Name</string>
    <string name="text_password">Password</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_login">Login</string>
    <string name="user">Pablo</string>
    <string name="intro">Introduction</string>
    <string name="body_text">You can make your own To-do lists </string>
    <string name="errorpassword">invalid password</string>
    <string name="erroruser">Invalid user</string>
    <string name="btnLogin">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnRegister">Register</string>
    <string name="done">Done</string>
    <string name="text_name">Name</string>
    <string name="text_last">Last name</string>
    <string name="document">Document</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="privacy">Privacy policy</string>
    <string name="btnDBSave">Save</string>
    <string name="btnDBUpdate">Update</string>
    <string name="btnDBdelete">Delete</string>
    <string name="btnRegisterWGoogle">Register with Google</string>
    <string name="btnRegisterWEmail">Registrar with Email</string>
    <string name="btnLoginWEmail">Login with Email</string>
    <string name="prefs_file">com.app.ejercicio_ciclo4.PREFERENCE_FILE_KEY</string>
</resources>