<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/authLayout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/black"
        android:background="@color/Green_dark"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="30dp"
        >

        <ImageView
            android:layout_width="73dp"
            android:layout_height="76dp"
            android:src="@drawable/shopping_car" />

<!--        <ImageView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:src="@drawable/logo_mision" />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/text_username"
            android:textColor="@color/black"
            android:textSize="25sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUsername"
            android:hint="email@domain.com"
            android:layout_marginTop="25dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordAuthentication"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textSize="25sp" />


        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idbtn"
            android:text="@string/btnLogin"
            android:textSize="20sp"
            android:onClick="onLogin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/btnRegister"
            android:textSize="20sp"
            android:onClick="onRegister"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegisterEmail"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:onClick="onRegisterEmail"
                android:text="@string/btnRegisterWEmail"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnLoginEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLoginEmail"
                android:text="@string/btnLoginWEmail"
                android:textSize="18sp" />



        </LinearLayout>

        <TextView

            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="I forgot the password"
            android:layout_gravity="end"/>

<com.google.android.gms.common.SignInButton
    android:id="@+id/btnGoogle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>



</LinearLayout>



</LinearLayout>